# Ockham

./: Akku.manifest  CMakeLists.txt  LICENSE  README.md  dune-project
examples/: basic.scm
include/ockham/: ockham.h
lib/: CMakeLists.txt  arena.c  arena.h  block.c  context.c  context.h  dune  function.c  helpers.h  instruction.c  ir.h  parse.c  print.c
lib/x86_64/: abi.md  emit.c  emit.h
scripts/: format.sh
src/ockham/: backend.scm  core.scm
test/: dune
tests/: test-backend.scm  test-core.scm
tests/unittests/: CMakeLists.txt  arena_test.c  block_test.c  context_test.c  emit_test.c  function_test.c  instruction_test.c  parse_test.c  print_test.c
tools/: CMakeLists.txt
tools/ockham/: CMakeLists.txt  main.c
